Bug 134295: Make position() work together with xsl:sort again. This will put back some problems with attribute-nodes, but those problems should be much less common then the current situation.

r=peterv sr=jst